# ai_lab_evo

./: AGENTS.md  AI-Lab-Specification.md  README.md  _reserveinfo.md  docker-compose.yml  initial requirements.md  package.json  pnpm-lock.yaml  requirements.txt  tailwind.config.cjs  the_product.rtf  tsconfig.base.json
apps/web/: components.json  i18n.ts  middleware.debug.ts  middleware.ts  next.config.js  package.json  tailwind.config.js  tsconfig.json
apps/web/.next/dev/: build-manifest.json  prerender-manifest.json  trace
apps/web/.next/dev/cache/: .rscinfo  chrome-devtools-workspace-uuid
apps/web/.next/dev/server/: app-paths-manifest.json  middleware-build-manifest.js  middleware-manifest.json  server-reference-manifest.js  server-reference-manifest.json
apps/web/.next/dev/server/app/: page.js  page_client-reference-manifest.js
apps/web/.next/dev/server/middleware/: middleware-manifest.json
apps/web/.next/dev/static/chunks/: 0894d_tailwind-merge_dist_bundle-mjs_mjs_705de4d7._.js.map  14361_@radix-ui_react-select_dist_index_mjs_52b0e1bc._.js  14361_@radix-ui_react-select_dist_index_mjs_52b0e1bc._.js.map  3cf09_motion-dom_dist_es_09ae94bb._.js  3cf09_motion-dom_dist_es_09ae94bb._.js.map  3cf09_motion-dom_dist_es_257aa41b._.js  821c6_next_dist_04145040._.js.map  (+123 more)
apps/web/.next/dev/types/: link.d.ts  routes.d.ts  validator.ts
apps/web/app/: layout.tsx  page.tsx
apps/web/app/admin/: page.tsx
apps/web/app/analytics/: page.tsx
apps/web/app/dashboards/: page.tsx
apps/web/app/experiments/: page.tsx
apps/web/app/files/: page.tsx
apps/web/app/governance/: page.tsx
apps/web/app/hypotheses/: page.tsx
apps/web/app/labs/: page.tsx
apps/web/app/notifications/: page.tsx
apps/web/app/people/: page.tsx
apps/web/app/resources/: page.tsx
apps/web/app/value/: page.tsx
apps/web/app/workflows/: page.tsx
apps/web/components/: global-header.tsx  hypothesis-board.tsx  module-page.tsx  notification-stream.tsx  portfolio-highlights.tsx  resource-pulse.tsx  workflow-timeline.tsx
apps/web/components/branding/: k2tech-logo.tsx
apps/web/components/components/ui/: combobox.tsx  command.tsx
apps/web/components/hypotheses/: bulk-edit-dialog.tsx  comment-thread.tsx  create-hypothesis-modal.tsx  hypothesis-activity.tsx  hypothesis-detail.tsx  hypothesis-filters.tsx  hypothesis-kanban.tsx  hypothesis-matrix.tsx  hypothesis-ops.tsx  hypothesis-snapshot.tsx  hypothesis-workspace.tsx  transition-dialog.tsx
apps/web/components/navigation/: floating-dock-nav-original.tsx  floating-dock-nav.tsx  locale-selector.tsx
apps/web/components/ui/: animated-chart.tsx  animated-input.tsx  animated-list.tsx  animated-modal.tsx  animated-steps.tsx  animated-table.tsx  animated-tooltip.tsx  bento-grid.tsx  card-hover-effects.tsx  floating-dock.tsx  index.ts  neon-button.tsx  neon-gradient-card.tsx  particle-background.tsx
apps/web/lib/: animations.ts  hypothesis-api.ts  hypothesis-data.ts  nav-links.ts  utils.ts
apps/web/messages/: en.json  ru.json
apps/web/styles/: globals.css
backend/app/: database.py  main.py  models.py  schemas.py  services.py
docs/: changelog.md
docs/backlog/: README.md
docs/services/: 5-1-onboarding-service.md  5-10-laboratory-service.md  5-11-dashboard-service.md  5-12-notification-service.md  5-13-file-storage-service.md  5-14-voice-service.md  5-15-admin-marketplace-service.md  5-16-analytics-service.md  5-17-workflow-orchestration-service.md  5-2-readiness-service.md  5-3-hypothesis-service.md  5-4-experiment-service.md  5-5-value-case-service.md  5-6-roi-calculator-service.md  5-7-iam-service.md  5-8-governance-service.md  5-9-resource-service-gpu-compute.md  README.md
frontend/: app.js  index.html  styles.css
scripts/: split_spec.py
services/admin/: pyproject.toml
services/admin/app/: api.py  main.py  schemas.py
services/admin/tests/: test_app.py
services/analytics/: pyproject.toml
services/analytics/app/: api.py  main.py  schemas.py
services/analytics/tests/: test_app.py
services/common/app/: __init__.py  config.py
services/dashboard/: pyproject.toml
services/dashboard/app/: api.py  main.py  schemas.py
services/dashboard/tests/: test_app.py
services/decision-agent/: .env.example  pyproject.toml
services/decision-agent/src/decision_agent/: __init__.py  agent.py  cli.py  config.py
services/experiments/: pyproject.toml
services/experiments/app/: api.py  main.py  schemas.py
services/experiments/tests/: test_app.py
services/file_storage/: pyproject.toml
services/file_storage/app/: api.py  main.py  schemas.py
services/file_storage/tests/: test_app.py
services/governance/: pyproject.toml
services/governance/app/: api.py  main.py  schemas.py
services/governance/tests/: test_app.py
services/hypothesis/: alembic.ini  hypothesis.db  pyproject.toml
services/hypothesis/alembic/: README.md  env.py  script.py.mako
services/hypothesis/alembic/versions/: 3c524947e090_initial_hypothesis_tables.py
services/hypothesis/app/: api.py  config.py  database.py  dependencies.py  main.py  models.py  repositories.py  schemas.py  seed.py  services.py
services/hypothesis/tests/: test_app.py
services/iam/: pyproject.toml
services/iam/app/: api.py  main.py  schemas.py
services/iam/tests/: test_app.py
services/laboratory/: pyproject.toml
services/laboratory/app/: api.py  main.py  schemas.py
services/laboratory/tests/: test_app.py
services/notification/: pyproject.toml
services/notification/app/: api.py  main.py  schemas.py
services/notification/tests/: test_app.py
services/resource/: pyproject.toml
services/resource/app/: api.py  main.py  schemas.py
services/resource/tests/: test_app.py
services/roi_calculator/: pyproject.toml
services/roi_calculator/app/: api.py  main.py  schemas.py
services/roi_calculator/tests/: test_app.py
services/value_case/: pyproject.toml
services/value_case/app/: api.py  main.py  schemas.py
services/value_case/tests/: test_app.py
services/workflow/: pyproject.toml
services/workflow/app/: api.py  main.py  schemas.py
services/workflow/tests/: test_app.py
(+267 files in other folders)
