
[project]
name = "ai-lab-hypothesis"
version = "0.1.0"
description = "Manage the lifecycle of hypotheses with stage transitions and metadata."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.103.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic[email]>=1.10.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.20",
    "alembic>=1.12.0",
    "psycopg[binary]>=3.1.9",
    "pytest>=7.4.0",
    "httpx>=0.24.0"
]

[project.scripts]
dev = "hypothesis.app.main:create_app"

[tool.setuptools]
package-dir = {"" = "app"}
packages = ["."]
