
[project]
name = "ai-lab-iam"
version = "0.1.0"
description = "Manage identities, roles, and access policies."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.103.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=1.10.0"
]

[project.scripts]
dev = "iam.app.main:create_app"

[tool.setuptools]
package-dir = {"" : "app"}
packages = ["."]
