
[project]
name = "ai-lab-notification"
version = "0.1.0"
description = "Route signals from events to end users."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.103.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=1.10.0"
]

[project.scripts]
dev = "notification.app.main:create_app"

[tool.setuptools]
package-dir = {"" : "app"}
packages = ["."]
